converted no-unused-vars into a warning

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,5 +25,6 @@
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "no-unused-vars": "warn",
   },
 }
